# mcp_youtube_extract

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/mcp_youtube_extract/: __init__.py  google_api.py  logger.py  server.py  transcript_api.py  youtube.py
tests/: __init__.py  test_context_fix.py  test_inspector.py  test_with_api_key.py  test_youtube_unit.py
